@@ -7,6 +7,8 @@ PHP                                                                        NEWS
   . Fixed bug GH-12349 (linking failure on ARM with mold). (Jan Palus)
   . Fixed bug GH-13097 (Anonymous class reference in trigger_error / thrown
     Exception). (nielsdos)
+  . Fixed bug GH-13177 (PHP 8.3.2: final private constructor not allowed
+    when used in trait). (nielsdos)
 
 - Curl:
   . Fix missing error check in curl_multi_init(). (divinity76)
